--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==1.8.19
+Django==2.2.1
 django-allauth==0.36.0
 django-cors-headers==2.2.0
 django-heroku==0.3.1
@@ -20,8 +20,8 @@ networkx==2.2
 numpy==1.15.4
 oauthlib==3.0.1
 opencv-python==4.0.0.21
-pillow==5.4.1
-psycopg2==2.8.2
+pillow==6.0.0
+psycopg2==2.7.6.1
 psycopg2-binary==2.8.2
 pygame==1.9.6
 pyparsing==2.3.0
@@ -30,13 +30,14 @@ python-decouple==3.1
 python3-openid==3.1.0
 pytz==2019.1
 PyWavelets==1.0.2
-requests==2.22.0
+requests==2.21.0
 requests-oauthlib==1.2.0
 scikit-image==0.15.0
 six==1.12.0
 sqlparse==0.3.0
 tflearn==0.3.2
-urllib3==1.25.3
+urllib3==1.24.3
 utils==0.9.0
 virtualenv==16.6.0
 whitenoise==4.1.2
+drf-dynamic-fields==0.3.1
